@@ -40,7 +40,6 @@ import org.wso2.am.integration.cucumbertests.utils.clients.SimpleHTTPClient;
 import org.wso2.carbon.automation.engine.context.beans.User;
 import org.wso2.carbon.automation.test.utils.http.client.HttpResponse;
 
-import javax.xml.bind.DatatypeConverter;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
@@ -112,7 +111,7 @@ public class BaseSteps {
         json.addProperty("saasApp", true);
         json.addProperty("owner", actor.getUserName());
 
-        String encodedCredentials = DatatypeConverter.printBase64Binary(
+        String encodedCredentials = Base64.getEncoder().encodeToString(
                     (actor.getUserName() + ':' + actor.getPassword()).getBytes(StandardCharsets.UTF_8));
 
         Map<String, String> headers = new HashMap<>();
@@ -480,6 +479,50 @@ public class BaseSteps {
     }
 
     /**
+     * Stores a filler text payload of exactly {@code sizeKb} KB in the context, for a request whose BYTE COUNT is
+     * the point rather than its content — a bandwidth (BANDWIDTHLIMIT) throttle quota is spent by bytes, so one
+     * body larger than the whole quota trips it in a single call. Generated rather than held as a fixture so the
+     * size is stated at the call site and no multi-KB literal lands in a feature file.
+     *
+     * @param sizeKb size of the payload in KB
+     * @param key    context key to store the payload under
+     */
+    @When("I put a {int} KB text payload in context as {string}")
+    public void putSizedTextPayloadInContext(int sizeKb, String key) {
+
+        TestContext.set(Utils.normalizeContextKey(key), "A".repeat(sizeKb * 1024));
+    }
+
+    /**
+     * Sets a top-level field to a JSON VALUE (array or object) rather than a string — e.g. giving an API two
+     * subscription policies, {@code ["QuotaPlan","AsyncWHUnlimited"]}, which a scenario needs when it compares a
+     * limited subscriber against an unlimited control on the SAME API.
+     *
+     * <p>Deliberately a separate step from {@link #iSetFieldInPayload}, not a smart-parsing upgrade of it: that one
+     * sets a STRING and callers depend on it doing exactly that (a value that merely looks like JSON must stay a
+     * string there). Picking the step IS the statement of intent, like TestContext.resolve/get/contains. Fails
+     * loudly if the value is not parseable JSON, so a typo cannot silently land as a string.
+     *
+     * @param field      the top-level JSON field to set
+     * @param json       a JSON array or object literal
+     * @param contextKey the context key holding the JSON payload
+     */
+    @When("I set the field {string} to the JSON value {string} in the payload {string}")
+    public void iSetFieldToJsonValueInPayload(String field, String json, String contextKey) {
+
+        JSONObject payload = new JSONObject(TestContext.resolve(contextKey).toString());
+        String resolved = Utils.resolveContextPlaceholders(json).trim();
+        Object value;
+        try {
+            value = resolved.startsWith("[") ? new org.json.JSONArray(resolved) : new JSONObject(resolved);
+        } catch (org.json.JSONException e) {
+            throw new IllegalArgumentException("Value for field '" + field + "' is not valid JSON: " + resolved, e);
+        }
+        payload.put(field, value);
+        TestContext.set(Utils.normalizeContextKey(contextKey), payload.toString());
+    }
+
+    /**
      * Sets a top-level field of a JSON payload already in context to the given value, writing it back under the
      * same key. Used to build create-validation negatives from a valid base payload (e.g. blank name/context/
      * version, or an invalid context) without a separate fixture per case. An empty {@code value} sets the
@@ -684,13 +727,49 @@ public class BaseSteps {
     @Then("The value of response field {string} should be {string}")
     public void theValueOfResponseFieldShouldBe(String fieldName, String expectedValue) throws IOException {
 
+        assertResponseFieldValue(fieldName, expectedValue, true);
+    }
+
+    /**
+     * Asserts a field's exact value in an ERROR (non-2xx) response body — the counterpart of
+     * {@link #theValueOfResponseFieldShouldBe} for a fault payload that names WHY the call was refused, where the
+     * status alone is ambiguous. Example: a gateway 429 carries a {@code code} identifying which throttle limit
+     * fired (application vs subscription vs burst vs API-level vs operation-level vs custom rule), so the status
+     * by itself cannot tell those dimensions apart.
+     *
+     * <p>Its status guard is the MIRROR IMAGE of the 2xx twin's, not an absence of one: the response must be
+     * non-2xx with a body, so a success payload carrying a same-named field can never satisfy this step either.
+     * Assert the status itself in its own step; this one pins the diagnosis in the body.
+     *
+     * @param fieldName     field name or JSONPath to read from the error response body
+     * @param expectedValue the exact expected value (string form)
+     */
+    @Then("The value of error response field {string} should be {string}")
+    public void theValueOfErrorResponseFieldShouldBe(String fieldName, String expectedValue) throws IOException {
+
+        assertResponseFieldValue(fieldName, expectedValue, false);
+    }
+
+    /**
+     * Shared body of the two field-value assertions: requires a body on the expected side of the 2xx boundary,
+     * then compares the field's string form to the expected value exactly.
+     *
+     * @param expectSuccess whether the response under assertion must be 2xx ({@code false} = must be non-2xx)
+     */
+    private void assertResponseFieldValue(String fieldName, String expectedValue, boolean expectSuccess)
+            throws IOException {
+
         expectedValue = Utils.resolveContextPlaceholders(expectedValue);
         HttpResponse response = (HttpResponse) TestContext.get("httpResponse");
-        // Require a SUCCESSFUL response: an error body (401/500 JSON) can carry a same-named field and must
-        // never satisfy a field assertion written against the success payload.
-        Assert.assertTrue(response != null && response.getResponseCode() >= 200 && response.getResponseCode() < 300
+        // Pin the response to the expected side of the 2xx boundary: an error body (401/500 JSON) can carry a
+        // same-named field and must never satisfy a field assertion written against the success payload, nor
+        // vice versa.
+        boolean successful = response != null && response.getResponseCode() >= 200
+                && response.getResponseCode() < 300;
+        Assert.assertTrue(response != null && successful == expectSuccess
                         && response.getData() != null && !response.getData().isBlank(),
-                "Expected a 2xx response with a body to read field '" + fieldName + "' from, but got: "
+                "Expected a " + (expectSuccess ? "2xx" : "non-2xx") + " response with a body to read field '"
+                        + fieldName + "' from, but got: "
                         + (response == null ? "null" : response.getResponseCode() + " / " + response.getData()));
         Object actual = Utils.extractValueFromPayload(response.getData(), fieldName);
         // Distinguish a MISSING field from a field literally equal to "null": without this a missing field
@@ -749,6 +828,31 @@ public class BaseSteps {
             value = new JSONObject(value.toString());
         }
         TestContext.set(Utils.normalizeContextKey(contextKey), value);
+    }
+
+    /**
+     * Captures the {@code id} of the entry called {@code name} in the last response's {@code {"list":[...]}}
+     * payload — the generic counterpart of {@link #iExtractResponseFieldAndStoreItAs} for the common "reference
+     * a resource whose id cannot be known ahead of time, by its name" need. It reads the response the PRECEDING
+     * list step already published, so no second HTTP call is made (and it works for any {@code {"list":[...]}}
+     * endpoint). Fails clearly when the response is missing/unsuccessful or holds no entry with that name.
+     *
+     * @param name       the exact {@code name} of the list entry to find
+     * @param contextKey context key under which the entry's id is stored
+     */
+    @Then("I capture the id of the list entry named {string} as {string}")
+    public void iCaptureListEntryIdByName(String name, String contextKey) throws IOException {
+
+        HttpResponse response = (HttpResponse) TestContext.get("httpResponse");
+        Assert.assertTrue(response != null && response.getResponseCode() >= 200
+                        && response.getResponseCode() < 300 && response.getData() != null
+                        && !response.getData().isBlank(),
+                "No successful list response with a body captured to look up entry '" + name + "'; got="
+                        + (response == null ? "null" : response.getResponseCode() + "/" + response.getData()));
+        String entryName = Utils.resolveContextPlaceholders(name);
+        String id = Utils.extractIdByName(response.getData(), entryName);
+        Assert.assertNotNull(id, "No entry named '" + entryName + "' in the list response: " + response.getData());
+        TestContext.set(Utils.normalizeContextKey(contextKey), id);
     }
 
     /**
@@ -1017,8 +1121,8 @@ public class BaseSteps {
      */
     private void verifyConfigurationInResponse(HttpResponse response, String config, String configValue) {
         Assert.assertTrue(response != null && response.getData() != null && !response.getData().isEmpty(),
-                "No response with a body to verify configuration '" + config + "' in; got "
-                        + (response == null ? "no response" : response.getResponseCode()));
+                "No response with a body to verify configuration '" + config + "' in; got="
+                        + (response == null ? "null" : response.getResponseCode() + "/" + response.getData()));
         JSONObject json = new JSONObject(response.getData());
         Assert.assertTrue(json.has(config), "Configuration '" + config + "' not found in response");
 
@@ -1086,7 +1190,7 @@ public class BaseSteps {
 
         String artifactUrl = Utils.getAPIArtifactDeployedInGatewayURL(getBaseUrl(), apiName, apiVersion, tenantDomain);
 
-        String encodedCredentials = DatatypeConverter.printBase64Binary(
+        String encodedCredentials = Base64.getEncoder().encodeToString(
                 (tenantAdmin.getUserName() + ':' + tenantAdmin.getPassword()).getBytes(StandardCharsets.UTF_8));
         Map<String, String> artifactHeaders = new HashMap<>();
         artifactHeaders.put(Constants.REQUEST_HEADERS.AUTHORIZATION, "Basic " + encodedCredentials);
